--- a/src/sass/components/_forms.scss
+++ b/src/sass/components/_forms.scss
@@ -3,11 +3,11 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  .input-text {
-    width: 100%;
-    font-size: 1.5rem;
-    padding: 0.25rem 0;
-  }
+}
+.textarea {
+  width: 100%;
+  font-size: 1.5rem;
+  padding: 0.25rem 0;
 }
 
 // checkbox
