--- a/src/sass/components/_todoListItem.scss
+++ b/src/sass/components/_todoListItem.scss
@@ -7,6 +7,7 @@
       width: calc(100% - 2rem);
       height: auto;
       padding-left: 2rem;
+      white-space:pre
     }
     &.complete {
       span {
