--- a/src/sass/layout/_common.scss
+++ b/src/sass/layout/_common.scss
@@ -1,16 +1,13 @@
 #root {
-  position: fixed;
   width: 100%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  height: 100%;
 }
 
 .container {
   max-width: 960px;
   width: calc(100% - 2rem);
   height: 540px;
-  margin: 0 auto;
+  margin: 5rem auto;
   background-color: $gray-color-1;
   padding: 2rem;
   box-sizing: border-box;
