--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,4 +9,5 @@
 @import "components/forms";
 @import "components/filter";
 @import "components/todoListItem";
+@import "components/addTodoForm";
 @import "components/modal";
