투두리스트 역순 정렬

--- a/src/sass/layout/_common.scss
+++ b/src/sass/layout/_common.scss
@@ -6,7 +6,7 @@
 .container {
   max-width: 960px;
   width: calc(100% - 2rem);
-  height: 540px;
+  height: auto;
   margin: 5rem auto;
   background-color: $gray-color-1;
   padding: 2rem;
