--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 @import "components/buttons";
 @import "components/forms";
 @import "components/filter";
-@import "components/todoListItem";
 @import "components/addTodoForm";
+@import "components/todoListItem";
+@import "components/todoList";
 @import "components/modal";
