--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -8,6 +8,7 @@ body {
   letter-spacing: 0;
   background-color: $primary-color;
   color: $base-color;
+  line-height: 1.4;
 
   @media #{$breakpoint-desktop} {
     font-size: 16px;
@@ -15,7 +16,7 @@ body {
 }
 
 a {
-  color: #272727;
+  color: $base-color;
   text-decoration: none;
 }
 
