--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -3,4 +3,8 @@
   background-color: $primary-color;
   color: $white;
   border-radius: 5px;
+
+  &.disabled {
+    background-color: $base-color;
+  }
 }
