--- a/src/sass/components/_filter.scss
+++ b/src/sass/components/_filter.scss
@@ -7,6 +7,8 @@
     background-color: $white;
     border-radius: 5px;
     color: $primary-color;
+    font-size: 1rem;
+    font-weight: 500;
 
     &.active {
       background-color: $primary-color;
