--- a/src/sass/components/_forms.scss
+++ b/src/sass/components/_forms.scss
@@ -6,6 +6,8 @@
 }
 .textarea {
   width: 100%;
+  font-family: "Noto Sans KR", sans-serif;
+  font-weight: 400;
 }
 
 // checkbox
@@ -60,7 +62,7 @@
   }
   &:after {
     top: 2px;
-    left: 7px;
+    left: 6px;
     box-sizing: border-box;
     width: 6px;
     height: 12px;
