--- a/src/sass/components/_todoListItem.scss
+++ b/src/sass/components/_todoListItem.scss
@@ -8,16 +8,26 @@
       font-size: 1rem;
       resize: none;
       text-decoration: underline;
+      margin-left: 13px;
+      line-height: 1.4;
+      background-color: $gray-color-1;
+      box-shadow: 0px 4px 10px -8px $base-color;
+      overflow: auto;
+      height: auto;
+      box-sizing: border-box;
+
+      display: block;
+      min-height: 40px;
     }
-    span {
+    p {
       display: inline-block;
       width: calc(100% - 2rem);
       height: auto;
-      padding-left: 1rem;
-      white-space:pre
+      padding: 2px 1rem;
+      white-space: pre-line;
     }
     &.complete {
-      span {
+      p {
         text-decoration: line-through;
         opacity: 0.3;
       }
@@ -27,8 +37,22 @@
   .item-footer {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     background-color: $gray-color-3;
     padding: 0.5rem 1rem;
+    font-size: 0.825rem;
+    .item-timestamp,
+    .item-functions {
+      span {
+        padding-left: 0.25rem;
+      }
+    }
+    .item-functions {
+      button {
+        font-size: 0.825rem;
+        color: $base-color;
+      }
+    }
   }
 }
 
