--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -7,6 +7,7 @@ $primary-color: #f86457;
 $gray-color-1: #f4f7fc;
 $gray-color-2: #e0e8f5;
 $gray-color-3: #d6deed;
+$gray-color-4: #a6afbf;
 
 $base-color: #74757b;
 
