--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -3,8 +3,23 @@
   background-color: $primary-color;
   color: $white;
   border-radius: 5px;
+  font-weight: 500;
+  font-size: 1rem;
 
   &.disabled {
-    background-color: $base-color;
+    background-color: $gray-color-4;
+  }
+
+  &.primary {
+    width: 7rem;
+    height: 3rem;
+  }
+
+  &.secondary {
+    width: 7rem;
+    height: 3rem;
+    background-color: $white;
+    border: 1px solid $base-color;
+    color: $base-color;
   }
 }
