할 일이 없을 때의 문구 추가

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -3,6 +3,7 @@ $breakpoint-desktop: "(min-width: 768px)";
 
 $white: #ffffff;
 $primary-color: #f86457;
+$sub-color: #ff867b;
 
 $gray-color-1: #f4f7fc;
 $gray-color-2: #e0e8f5;
@@ -14,3 +15,5 @@ $base-color: #74757b;
 $primary-focus-color: #ff9d49;
 $primary-hover-color: #ffb77a;
 $primary-normal-color: #ffc695;
+
+$base-radius: 5px;
