--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -2,7 +2,7 @@
   width: auto;
   background-color: $primary-color;
   color: $white;
-  border-radius: 5px;
+  border-radius: $base-radius;
   font-weight: 500;
   font-size: 1rem;
 
