--- a/src/sass/layout/_common.scss
+++ b/src/sass/layout/_common.scss
@@ -4,11 +4,14 @@
 }
 
 .container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   max-width: 960px;
   width: calc(100% - 2rem);
-  height: auto;
-  margin: 5rem auto;
+  height: 540px;
+  padding: 2rem 0;
   background-color: $gray-color-1;
-  padding: 2rem;
   box-sizing: border-box;
 }
