--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -28,7 +28,7 @@ textarea {
   border: 0;
   resize: none;
   color: $base-color;
-  border-radius: 5px;
+  border-radius: $base-radius;
 }
 
 button,
