--- a/src/sass/components/_AddTodoForm.scss
+++ b/src/sass/components/_AddTodoForm.scss
@@ -1,5 +1,7 @@
 form.add-todo-form {
-  margin-top: 1rem;
+  box-sizing: border-box;
+  padding: 1rem 2rem;
+  box-shadow: 0px 4px 10px -8px $base-color;
   textarea {
     font-size: 1rem;
     padding: 0.5rem;
