--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -5,23 +5,25 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 20;
+  z-index: 500;
 }
 
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 466px;
+  width: 24rem;
   height: auto;
   background: #ffffff;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.25);
   outline: 0;
   transform: translate(-50%, -50%);
+  border-radius: $base-radius;
+  z-index: 1000;
 }
 
 .modal-overlay .modal .modal-wrapper {
-  padding: 20px;
+  padding: 1.5rem;
   .modal-header {
     font-family: Helvetica;
     font-size: 22px;
