--- a/src/sass/components/_todoList.scss
+++ b/src/sass/components/_todoList.scss
@@ -5,7 +5,7 @@
   .todo-none-text {
     padding: 2rem 0;
     text-align: center;
-    font-size: 1.2rem;
+    font-size: $font-size-large;
   }
   ul {
     margin-top: 2rem;
