--- a/src/sass/components/_AddTodoForm.scss
+++ b/src/sass/components/_AddTodoForm.scss
@@ -3,12 +3,13 @@ form.add-todo-form {
   padding: 1rem 2rem;
   box-shadow: 0px 4px 10px -8px $base-color;
   textarea {
-    font-size: 1rem;
+    background-color: $white;
+    font-size: $font-size-base;
     padding: 0.5rem;
   }
   button {
     width: 9rem;
     margin-left: 1rem;
-    font-size: 2rem;
+    font-size: $font-size-largest;
   }
 }
