--- a/src/sass/components/_filter.scss
+++ b/src/sass/components/_filter.scss
@@ -8,8 +8,8 @@
     background-color: $white;
     border-radius: $base-radius;
     color: $primary-color;
-    font-size: 1rem;
-    font-weight: 500;
+    font-size: $font-size-base;
+    font-weight: $font-weight-medium;
     transition: all 0.1s;
 
     &.active {
