--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -10,14 +10,12 @@
 
 .modal {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  @extend %center;
   width: 24rem;
   height: auto;
-  background: #ffffff;
+  background: $white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.25);
   outline: 0;
-  transform: translate(-50%, -50%);
   border-radius: $base-radius;
   z-index: 1000;
 }
@@ -25,16 +23,14 @@
 .modal-overlay .modal .modal-wrapper {
   padding: 1.5rem;
   .modal-header {
-    font-family: Helvetica;
-    font-size: 22px;
-    color: #4d5256;
+    font-size: $font-size-large;
+    color: $base-color;
     letter-spacing: 0;
-    line-height: 22px;
-    font-weight: 700;
+    font-weight: $font-weight-bold;
   }
 
   .modal-body {
-    font-size: 18px;
+    font-size: $font-size-large;
     padding: 2rem 0;
   }
 
@@ -45,7 +41,7 @@
     box-sizing: border-box;
     text-align: right;
     button {
-      margin-left: 14px;
+      margin-left: 1rem;
     }
   }
 }
