--- a/src/sass/layout/_common.scss
+++ b/src/sass/layout/_common.scss
@@ -8,9 +8,13 @@
   @extend %center;
   max-width: 960px;
   width: calc(100% - 2rem);
-  height: 540px;
+  height: 640px;
   padding: 2rem 0;
   background-color: $gray-color-1;
   box-sizing: border-box;
   box-shadow: 0 0 10px 5px rgba($base-color, 0.3);
+
+  @media #{$breakpoint-mobile} {
+    height: 480px;
+  }
 }
